--- a/app/src/main/res/layout/fragment_add_notes.xml
+++ b/app/src/main/res/layout/fragment_add_notes.xml
@@ -11,17 +11,20 @@
 
     <EditText
         android:id="@+id/notes"
-        android:layout_width="364dp"
-        android:layout_height="349dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="368dp"
+        android:layout_height="332dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/et_bg"
         android:ems="10"
         android:gravity="start|top"
         android:hint="Add your notes"
         android:inputType="textMultiLine"
+        android:paddingLeft="16dp"
+        android:paddingTop="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/notesTitle"
+        tools:ignore="MissingConstraints" />
 
     <Button
         android:id="@+id/saveBtn"
@@ -30,8 +33,24 @@
         android:text="SAVE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.521"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/notes"
-        app:layout_constraintVertical_bias="0.093" />
+        app:layout_constraintVertical_bias="0.07" />
+
+    <EditText
+        android:id="@+id/notesTitle"
+        android:layout_width="364dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/et_bg"
+        android:ems="10"
+        android:hint="Title"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.553"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
