--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -14,7 +14,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addNotesBtn"
@@ -24,6 +25,7 @@
         android:layout_marginRight="32dp"
         android:layout_marginBottom="52dp"
         android:clickable="true"
+        android:backgroundTint="#407BFF"
         android:src="@drawable/ic_notes"
         android:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
